# latebit-template

./: .clangd  CMakeLists.txt  README.md  latebit.cfg  main.cpp
assets/sprites/: bubbles  logo
cmake/: FetchKiosk.cmake  VendorLatebit.cmake
src/characters/: Fish.cpp
src/scenes/: GameScene.cpp
